# oop_labs

lab1/: CMakeLists.txt  count_ones.cpp  count_ones.h  main.cpp  tests.cpp
